Ci1-ft_printf: Makefile: dummy_test works for current ft_printf dummy

--- a/Ci1-ft_printf-crtests/Makefile
+++ b/Ci1-ft_printf-crtests/Makefile
@@ -6,33 +6,45 @@
 #    By: reciak <reciak@student.42vienna.com>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/22 21:15:03 by reciak            #+#    #+#              #
-#    Updated: 2025/06/03 19:54:13 by reciak           ###   ########.fr        #
+#    Updated: 2025/06/04 09:54:36 by reciak           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-INC_DIR1 := ../../inc/
-INC_DIR2 := ../../libft/
-
+UNIT_TESTS_FILE := ft_printf-tests.c
+OUT := $(basename $(UNIT_TESTS_FILE))
 
 CC := cc
-CFLAGS =  -Wall -Wextra -Werror 
-CFLAGS += -I$(INC_DIR1) -I$(INC_DIR2)
-CFLGAS += -lcriterion -lftprintf -lft
+CFLAGS =  -Wall -Wextra -Werror -I$(INC_DIR1) -I$(INC_DIR2)
+LFLAGS = -lcriterion $(LIBFT_AR)
+RM    := rm -f
 
-
-BASE_DIR := ../../
+BASE_DIR  := ../../
+INC_DIR1  := $(BASE_DIR)inc/
+INC_DIR2  := $(BASE_DIR)libft/
+LIBFT_DIR := $(BASE_DIR)libft/
+LIBFT_AR  := $(LIBFT_DIR)libft.a
 
 SRCS := \
 src/ft_printf.c
 
 SRCS := $(addprefix $(BASE_DIR),$(SRCS))
+SRCS := $(SRCS) $(UNIT_TESTS_FILE)
 
-.PHONY:
+.PHONY: dummy_test
 dummy_test:
 	@echo 'A test when developing the Makefile (and makefile) for ft_printf'
+	@echo '1. Compiling tests'
+	@echo '   -->  $(OUT)'
+	@$(CC) $(CFLAGS) $(SRCS) $(LFLAGS) -o $(OUT)
+	@echo '2. Executing tests'
+	@echo '      ./$(OUT)'
+	@./$(OUT)
 	
-	$(CC) $(CFLAGS) ft_printf_test.c $(SRCS)
 
 .PHONY: alltests
 alltests:
 	@echo 'Not implemented yet beyond this dummy version...'
+
+.PHONY: fclean
+fclean:
+	$(RM) $(OUT)
