Ci1-ft_printf: Conceptually simplified Makefile
making it hopefully more easily to use for others

--- a/Ci1-ft_printf-crtests/Makefile
+++ b/Ci1-ft_printf-crtests/Makefile
@@ -6,73 +6,60 @@
 #    By: reciak <reciak@student.42vienna.com>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/22 21:15:03 by reciak            #+#    #+#              #
-#    Updated: 2025/06/08 13:05:56 by reciak           ###   ########.fr        #
+#    Updated: 2025/06/17 18:00:11 by reciak           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
+# DO NOT CHANGE
+PROJECT_TITLE   := ft_printf
 UNIT_TESTS_FILE := ft_printf-tests.c
-OUT := $(basename $(UNIT_TESTS_FILE))
 
-CC := cc
-CFLAGS = -Wall -Wextra -Werror -I$(INC_DIR1) -I$(INC_DIR2)
+# ADOPT:
+#   BASE_DIR:      Location of Makefile (the one that builts the project target)
+#   INC_DIRS:      Locations where header files are, e.g.
+#                     libftprintf.h   and  libft.h  
+#   LIB_FILE_NAME:    libftprintf.a  (probably no need to change)
+BASE_DIR        := ../../
+INC_DIRS        := inc/  libft/
+LIB_FILE_NAME   := libftprintf.a
 
+INC_DIRS := $(addprefix -I$(BASE_DIR),$(INC_DIRS))
+OUT      := $(basename $(UNIT_TESTS_FILE))
+LIB_FILE := $(BASE_DIR)$(LIB_FILE_NAME)
 
-ifeq ($(DEV), 1)
-  CFLAGS += -Wno-format-security
-else
-  ifneq ($(PRINT_NOTE), 0)
-    $(info **********************************************************************)
-    $(info *                  !! IMPORTANT NOTE !!                              *)
-    $(info *                                                                    *)
-    $(info * In case of compiler error try running make with flag  DEV  , e.g.  *)
-    $(info *   make DEV=1 unit-tests                                            *)
-    $(info * Suppress Output to stdout:                                         *)
-    $(info *   make DEV=1 unit-tests  >  /dev/null                              *)
-    $(info **********************************************************************)
-  endif
-endif
-LFLAGS = -lcriterion $(LIBFT_AR)
+CC     := cc
+CFLAGS := -Wall -Wextra -Werror $(INC_DIRS)
+CFLAGS += -Wno-format-security    #To prevent warning issues (printf -security)
+LFLAGS = -lcriterion $(LIB_FILE)
 RM    := rm -f
 
-BASE_DIR  := ../../
-INC_DIR1  := $(BASE_DIR)inc/
-INC_DIR2  := $(BASE_DIR)libft/
-LIBFT_DIR := $(BASE_DIR)libft/
-LIBFT_AR  := $(LIBFT_DIR)libft.a
-
-SRCS := \
-src/ft_printf.c
-
-SRCS := $(addprefix $(BASE_DIR),$(SRCS))
-SRCS := $(SRCS) $(UNIT_TESTS_FILE)
-
 .PHONY: unit-tests
-unit-tests: provide-libft
-	@echo '1. Compiling tests'
+unit-tests:
+	@echo
+	@echo '************ This is 42-eva-lua for $(PROJECT_TITLE) ************'
+	@echo
+	@echo '1. Calling make in $(BASE_DIR) which should provide $(LIB_FILE_NAME)'
+	@echo '-------'
+	@make -C $(BASE_DIR)
+	@echo '-------'
+	@echo 'Looking in $(BASE_DIR) for $(LIB_FILE_NAME) ...'
+	@if [ ! -e $(LIB_FILE) ]; then \
+	  echo '   ... Not found. Stop.' && exit 1; \
+	else \
+	  echo '   ... Found! Continuing.'; \
+	fi
+	@echo '2. Compiling tests'
 	@echo '   -->  $(OUT)'
-	@$(CC) $(CFLAGS) $(SRCS) $(LFLAGS) -o $(OUT)
-	@echo '2. Executing tests'
+	@$(CC) $(CFLAGS) $(UNIT_TESTS_FILE) $(LFLAGS) -o $(OUT)
+	@echo '3. Executing tests'
 	@echo '      ./$(OUT)'
+	@echo
 	@./$(OUT)
-
-.PHONY: alltests
-alltests:
-	@echo 'Not implemented yet beyond this dummy version...'
 
 .PHONY: fclean
 fclean:
 	$(RM) $(OUT)
 
-.PHONY: provide-libft
-provide-libft:
-	@echo "Checking if $(LIBFT_AR) is present ..."
-	@if [ ! -e $(LIBFT_AR) ]; then \
-	  echo '   ... Not found --> trying to create it'; \
-	  sleep 2; \
-	  make -C $(LIBFT_DIR) all; \
-	  -make -C $(LIBFT_DIR) bonus; \
-	  make -C $(LIBFT_DIR) clean; \
-	else \
-	  echo '   ... Found!'; \
-	fi
+.PHONY: re
+re: fclean unit-tests
 
