Ci1-ft_printf: Fixed Makefile in case of active flag DEBUG=1
The compilerflag -tidy does not exist...

--- a/Ci1-ft_printf-crtests/Makefile
+++ b/Ci1-ft_printf-crtests/Makefile
@@ -33,7 +33,7 @@ CFLAGS := -Wall -Wextra -Werror
 CFLAGS += -Wno-format-security#To prevent warning issues (printf -security)
 CFLAGS += $(INC_DIRS)
 ifeq ($(DEBUG), 1)
-	CFLAGS += -tidy -g3 -fsanitize=address,undefined,leak
+	CFLAGS += -g3 -fsanitize=address,undefined,leak
 endif
 LFLAGS = -lcriterion $(LIB_FILE)
 RM    := rm -f
